--- a/src/configs/video_llama/video_llama.yaml
+++ b/src/configs/video_llama/video_llama.yaml
@@ -6,6 +6,15 @@ model:
 
 
 preprocess:
+    vis_processor:
+        train:
+          name: "alpro_video_train"
+          image_size: 224
+          n_frms: 8
+        eval:
+          name: "alpro_video_eval"
+          image_size: 224
+          n_frms: 8
     text_processor:
         train:
           name: "blip_caption"
